Fix so that d3 livebean graph builds properly

--- a/plugins/org.springframework.ide.eclipse.beans.ui.livegraph/build.properties
+++ b/plugins/org.springframework.ide.eclipse.beans.ui.livegraph/build.properties
@@ -4,7 +4,10 @@ bin.includes = META-INF/,\
                .,\
                about.html,\
                plugin.xml,\
-               icons/
+               icons/,\
+               resources/
 src.includes = icons/,\
                about.html,\
-               pom.xml
+               pom.xml,\
+               resources/,\
+               META-INF/
